--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -460,6 +460,6 @@ h2 {
 
 .shopping-cart {
     body.dark &{
-        color: $blanco;
+        color: #fff;
         }
 }
